[package]
name = "deepslate"
version = "0.1.0"
edition = "2021"
description = "A CLI tool for mod distribution"

[dependencies]
age = "0.10.0"
base64 = "0.22.1"
clap = { version = "4.5.16", features = ["derive"] }
config = { version = "0.14.0", default-features = false, features = [
  "toml",
  "convert-case",
  "async",
] }
dirs = "5.0.1"
inquire = { version = "0.7.5", features = ["editor"] }
lazy_static = "1.5.0"
log = "0.4.22"
octocrab = "0.39.0"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.209", features = ["derive"] }
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.19"
